# neopg

./: .clang-format  .codecov.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  PITCHME.md  README.md  default-clang.nix  default.nix  license.txt  readme.md
legacy/: CMakeLists.txt
legacy/libassuan/: README
legacy/libgpg-error/: README
legacy/libksba/: AUTHORS
legacy/npth/: README
lib/: CMakeLists.txt
lib/crypto/: rng.cpp  rng.h
lib/openpgp/: compressed_data_packet.cpp  compressed_data_packet.h  compressed_data_packet_tests.cpp  header.cpp  literal_data_packet.cpp  literal_data_packet.h  literal_data_packet_tests.cpp  marker_packet.cpp  marker_packet.h  marker_packet_tests.cpp  modification_detection_code_packet.cpp  modification_detection_code_packet.h  modification_detection_code_packet_tests.cpp  multiprecision_integer.cpp  multiprecision_integer.h  multiprecision_integer_tests.cpp  object_identifier.cpp  object_identifier.h  object_identifier_tests.cpp  packet.cpp  packet.h  packet_header.cpp  packet_header.h  packet_header_tests.cpp  packet_tests.cpp  public_key_packet.cpp  public_key_packet.h  public_key_packet_tests.cpp  public_subkey_packet.cpp  public_subkey_packet.h  public_subkey_packet_tests.cpp  raw_packet.cpp  raw_packet.h  raw_packet_tests.cpp  signature_packet.cpp  signature_packet.h  signature_packet_tests.cpp  symmetrically_encrypted_data_packet.cpp  symmetrically_encrypted_data_packet.h  symmetrically_encrypted_data_packet_tests.cpp  (+12 more)
lib/parser/: openpgp.cpp  openpgp.h  openpgp_tests.cpp  parser_error.h  parser_input.cpp  parser_input.h  parser_input_tests.cpp  parser_position.h
lib/proto/: http.cpp  http.h  http_tests.cpp  uri.cpp  uri.h  uri_tests.cpp
lib/tests/: CMakeLists.txt
lib/utils/: common.h  stream.cpp  stream.h  stream_tests.cpp  time.cpp
libassuan/: .gitignore  AUTHORS  ChangeLog  ChangeLog-2011  Makefile.am  NEWS  autogen.rc  autogen.sh  configure.ac
libassuan/contrib/: ChangeLog-2011
libassuan/doc/: ChangeLog-2011  DCO  HACKING  Makefile.am  assuan.texi  gpl.texi
libassuan/src/: ChangeLog-2011  Makefile.am  assuan-buffer.c  assuan-buffer.cpp  assuan-defs.h  assuan-error.cpp  assuan-handler.c  assuan-handler.cpp  assuan-inquire.cpp  assuan-io.cpp  assuan-listen.cpp  assuan-logging.c  assuan-logging.cpp  assuan-pipe-connect.c  assuan-pipe-connect.cpp  assuan-pipe-server.c  assuan-socket-connect.c  assuan-socket-server.c  assuan-socket-server.cpp  assuan-socket.c  assuan-socket.cpp  assuan-uds.c  assuan-uds.cpp  assuan.c  assuan.cpp  assuan.h  assuan.h.in  client.c  client.cpp  context.c  context.cpp  debug.c  debug.h  funopen.c  gpgcedev.c  gpgcemgr.c  libassuan-config.in  libassuan.def  libassuan.m4  libassuan.vers  (+16 more)
libassuan/tests/: ChangeLog-2011  Makefile.am  assuan-test.cpp  ce-server.c  common.h  fdpassing.c  fdpassing.cpp  pipeconnect.c  socks5.c  version.c
libgcrypt/: Makefile.am  configure.ac
libgcrypt/cipher/: arcfour.cpp  blake2.cpp  blowfish.cpp  bufhelp.h  camellia-glue.cpp  cast5.cpp  chacha20.cpp  cipher-cfb.cpp  cipher-cmac.cpp  cipher-ctr.cpp  cipher-gcm.cpp  cipher-ofb.cpp  cipher-poly1305.cpp  cipher-selftest.cpp  cipher.cpp  crc.cpp  des.cpp  dsa-common.cpp  dsa.cpp  ecc-common.h  ecc-curves.cpp  ecc-ecdsa.cpp  ecc-eddsa.cpp  ecc-gost.cpp  ecc-misc.cpp  ecc.cpp  elgamal.cpp  gost28147.cpp  gostr3411-94.cpp  hash-common.cpp  idea.cpp  kdf.cpp  keccak.cpp  mac-hmac.cpp  mac-poly1305.cpp  mac.cpp  md.cpp  md5.cpp  poly1305.cpp  primegen.cpp  (+17 more)
libgcrypt/mpi/: ec.cpp  mpi-mpow.cpp  mpicoder.cpp  mpih-mul.cpp  mpiutil.cpp
libgcrypt/random/: Makefile.am  rand-internal.h  random-csprng.cpp  random-drbg.cpp  random-fips.cpp  random-system.cpp  random.c  random.cpp  random.h  rndlinux.c  rndw32.cpp
libgcrypt/src/: Makefile.am  cipher.h  context.cpp  ec-context.h  fips.cpp  g10lib.h  gcrypt-int.h  gcrypt.h  global.c  global.cpp  hmac256.cpp  hwfeatures.cpp  misc.cpp  mpi.h  secmem.cpp  sexp.cpp  visibility.c  visibility.cpp  visibility.h
libgcrypt/tests/: Makefile.am  bench-slope.c  benchmark.c  dsa-rfc6979.cpp  fips186-dsa.c  fipsdrv.c  gcrypt-secmem-test.cpp  gcrypt-test.cpp  hmac.c  mpitests.c  pkcs1v2.c  rsacvt.c  t-common.h
libgpg-error/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Makefile.am  NEWS  autogen.rc  config.h.cmake  configure.ac
libgpg-error/doc/: Makefile.am  errorref.txt  gpgrt.texi  ldap2gpgerr.c  yat2m.c
libgpg-error/m4/: Makefile.am  ac_prog_cc_for_build.m4  threadlib.m4
libgpg-error/po/: LINGUAS  Makevars  POTFILES.in  cs.po  eo.po  fr.po  it.po  pl.po  ro.po  ru.po  vi.po  zh_TW.po
libgpg-error/src/: Makefile.am  b64dec.c  b64dec.cpp  code-from-errno.c  code-from-errno.cpp  code-to-errno.c  err-codes.h.in  estream-printf.c  estream-printf.cpp  estream-printf.h  estream.c  estream.cpp  estream.h  gpg-error-config.in  gpg-error.c  gpg-error.def.in  gpg-error.h  gpg-error.h.in  gpg-error.m4  gpg-error.vers  gpgrt-int.h  gpgrt.h  init.c  init.h  lock.h  mkheader.c  mkw32errmap.c  posix-lock.c  posix-thread.c  posix-thread.cpp  strerror.c  strerror.cpp  strsource.c  strsource.cpp  thread.h  version.c  versioninfo.rc.in  visibility.c  visibility.cpp  visibility.h  (+7 more)
libgpg-error/tests/: Makefile.am  gpg-error-test.cpp  t-b64dec.c  t-b64dec.cpp  t-common.h  t-lock.c  t-lock.cpp  t-poll.c  t-poll.cpp  t-printf.c  t-strerror.c  t-strerror.cpp  t-syserror.c  t-version.c
libksba/: .gitignore  ChangeLog  ChangeLog-2011  Makefile.am  NEWS  README  announce.txt  autogen.rc  configure.ac  ksba.txt
libksba/build-aux/: git-log-footer
libksba/doc/: ChangeLog-2011  HACKING  Makefile.am  ksba.texi
libksba/gl/: Makefile.am
libksba/m4/: Makefile.am
libksba/src/: ChangeLog-2011  Makefile.am  asn1-func.c  asn1-func.cpp  asn1-func.h  asn1-parse.c  (+51 more)
neopg/: CMakeLists.txt
npth/: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  autogen.rc  configure.ac  npth-config.in  npth.spec.in
src/: CMakeLists.txt  Doxyfile.in  args.h  args.hpp  config.h.in  global_options.h  neopg.cpp  neopg.cxx
tests/: CMakeLists.txt  benchmarks.sh  openpgp.cpp
(+1405 files in other folders)
